hard-gists/969ea467e870b68963f3/run.log
=== Docker Run Log for 969ea467e870b68963f3 ===
Started at: Mi 29. Okt 18:30:53 CET 2025

[2025-10-29 18:30:54] START: Running container for 969ea467e870b68963f3
[2025-10-29 18:30:54] SUCCESS: Container 3484a933bf5cb101c92be60105ce0bb965f3c8600e76f8ae26f5afdcb2af4bb7 started for 969ea467e870b68963f3
=== Container logs for 969ea467e870b68963f3 ===
  File "/snippet.py", line 37
    print '\033[95m'+"Checking with Rapportive..."+'\033[0m'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 969ea467e870b68963f3 ===
[2025-10-29 18:30:56] INFO: Container 3484a933bf5cb101c92be60105ce0bb965f3c8600e76f8ae26f5afdcb2af4bb7 has stopped
